src/test/ui/parser/trailing-carriage-return-in-string.stderr
error: unknown character escape: /r
  --> $DIR/trailing-carriage-return-in-string.rs:10:25
   |
LL |     let bad = "This is / a test";
   |                         ^
   |
help: this is an isolated carriage return; consider checking your editor and version control settings
  --> $DIR/trailing-carriage-return-in-string.rs:10:25
   |
LL |     let bad = "This is / a test";
   |                         ^

error: aborting due to previous error

